@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-11-05T16:23:10Z",
-  "count_outdated" : 4,
-  "uniques_outdated" : 4,
-  "count" : 5,
-  "uniques" : 5,
+  "timestamp" : "2022-12-07T08:19:39Z",
+  "count_outdated" : 5,
+  "uniques_outdated" : 5,
+  "count" : 7,
+  "uniques" : 6,
   "clones" : [
     {
-      "timestamp": "2022-11-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
